Feat: Build & index updates

--- a/index.html
+++ b/index.html
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume - Jai Kumar Dewani</title>
-    <style>
-        *{
-            border:0;
-            margin:0;
-        }
-    </style>
-</head>
-<body>
-    <div style="height: 100vh;">
-        <iframe src="https://jai-dewani.github.io/resume/resume.pdf" width="100%" height="100%">
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="keywords"
+			content="rutvik joshi, rutvik j, data science, data analytics, business analyst, résumé, resume"
+		/>
+		<meta name="description" content="Rutvik Joshi's résumé." />
+		<meta name="author" content="Rutvik Joshi" />
+		<meta property="og:site_name" content="Rutvik J" />
+		<meta property="og:title" content="Rutvik Joshi" />
+		<meta property="og:type" content="website" />
+		<meta property="og:description" content="Data, Design & Development" />
+		<meta
+			property="og:url"
+			content="https://rutvik-j.github.io/resume/"
+		/>
+		<meta
+			property="og:image"
+			content="https://avatars.githubusercontent.com/u/45565999?v=4"
+		/>
+		<meta
+			property="twitter:image"
+			content="https://avatars.githubusercontent.com/u/45565999?v=4"
+		/>
+
+		<title>Loading PDF, please wait...</title>
+	</head>
+
+	<body>
+		Loading PDF, please wait...
+		<br />
+		<br />
+		If the download doesn't start automatically, please download the résumé
+		manually 👉
+		<a href="Rutvik Joshi - Resume.pdf">Rutvik Joshi - Resume.pdf</a>
+
+		<script>
+			window.location = "/resume/Rutvik Joshi - Resume.pdf";
+		</script>
+	</body>
 </html>
